syntax="proto3";

option go_package="github.com/backend-ids";

package ids_proto;


//declare the services for the student

service StudentCRUD {
    rpc CreateQuestion(Question) returns (Status); //student creates question
    rpc CreateComment(SolId) returns(Comment); //student create comment for the solution
}
//declare services for the mentor
service MentorCRUD {
   rpc CreateSolution(Solution) returns (Status); //mentor creates solution
   rpc CreateComment(SolId) returns (Comment); //mentor creates comment for solution
}

message Comment{
    string desc=1;
}
message SolId{
    string id=1;
}
message Status{
    string id=1;
}
message Question {
    string subject=1;
    string topic=2;
    string desc=3;
}

message Solution {
    string explanation=1;
}